--- a/test/module/module-test.html
+++ b/test/module/module-test.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div ng-app="app" ng-controller="MainCtrl">
+    <div ng-module="app" ng-controller="MainCtrl">
         <person header="header">
             
             <h2>{{header}}</h2>
@@ -17,9 +17,7 @@
             <p>inner scope id {{$id}},parent id {{$parent.$id}} </p>
         </person>
     </div>
-    <div id="second" ng-app="newApp" ng-controller="newMainCtrl">
-      {{name}}
-    </div>
+    
     <script type="text/javascript">
     angular.module('app', []).controller('MainCtrl', function($scope) {
             $scope.person = {
@@ -55,12 +53,12 @@
             };
         });
 
-    var newApp =angular.module('newApp',[]);
-    newApp.controller('newMainCtrl',function($scope){
-        $scope.name ="newMainCtrl";      
-    });
+    // var newApp =angular.module('newApp',[]);
+    // newApp.controller('newMainCtrl',function($scope){
+    //     $scope.name ="newMainCtrl";      
+    // });
 
-    angular.bootstrap(document.querySelector("#second"), ['newApp']);
+    //angular.bootstrap(document.querySelector("#second"), ['newApp']);
     </script>
 </body>
 
