--- a/test/test.html
+++ b/test/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>test angular js</title>
-    <script src="angular.js"></script>   
+    <script src="../Angular.js"></script>   
 </head>
 <body ng-app="myApp" ng-controller="myController">
 <div ng-show="true">
